# py-doq

./: .editorconfig  .gitignore  LICENSE  MANIFEST.in  README.rst  pyproject.toml  renovate.json  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: release-drafter.yml
.github/workflows/: depoly.yml  main.yml  release-management.yml  release.yml
doq/: __init__.py  _shtab.py  cli.py  config.py  outputter.py  parser.py  template.py
doq/templates/google/: def.txt
doq/templates/numpy/: def.txt  noarg.txt
doq/templates/sphinx/: class.txt  def.txt  noarg.txt
examples/: def.txt
tests/: test_cli.py  test_config.py  test_outputter.py  test_parser.py  test_template.py
tests/expected/google/: async.txt  class.txt  classes.txt  defs.txt  issues.txt  mix.txt  nested.txt  nested_classes.txt  nested_defs.txt  return_type.txt
tests/expected/numpy/: async.txt  class.txt  classes.txt  defs.txt  issues.txt  mix.txt  nested.txt  nested_classes.txt  nested_defs.txt  return_type.txt
tests/expected/sphinx/: async.txt  class.txt  classes.txt  defs.txt  exists.txt  issues.txt  mix.txt  nested.txt  nested_classes.txt  nested_defs.txt  return_type.txt
tests/fixtures/: async.txt  class.txt  classes.txt  comments.txt  defs.txt  issues.txt  mix.txt  nested.txt  nested_classes.txt  nested_defs.txt  pyproject.toml  return_type.txt  setup.cfg
