[build-system]
requires = ["setuptools_scm", "setuptools-generate == 0.0.6", "parso"]
build-backend = "setuptools.build_meta"

# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[project]
name = "doq"
description = "Docstring generator"
readme = "README.rst"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Topic :: Documentation",
  "Topic :: Software Development :: Documentation",
]
dependencies = ["parso", "jinja2", "toml"]
dynamic = ["version"]

[project.optional-dependencies]
completion = ["shtab"]
test = ["parameterized"]

[[project.authors]]
name = "Shinya Ohyanagi"
email = "sohyanagi@gmail.com"

[project.license]
text = "BSD"

[project.urls]
Homepage = "http://github.com/heavenshell/py-doq"

[project.scripts]
doq = "doq.cli:main"

[tool.setuptools.data-files]
"share/man/man1" = ["sdist/doq.1"]
"share/bash-completion/completions" = ["sdist/doq"]
"share/zsh/site-functions" = ["sdist/_doq"]

[tool.setuptools.packages.find]
include = ["doq"]

[tool.setuptools_scm]
write_to = "doq/_version.py"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
